--- a/user.css
+++ b/user.css
@@ -7,6 +7,8 @@
 /* Variable style */
 :root{
     --primary-color:#9FE2BF;
+    --deep-green:#1FF49F;
+    --dark-green:#3A824C;
     --secondary-color:#ffff;
     --black-color:#000;
 }
@@ -68,7 +70,7 @@ header .right-nav{
 }
 
 
-/* *********User Section******* */
+/* ********************USER SECTION********************** */
 .user-container{
     width: 100%;
     height: 100vh;
@@ -77,10 +79,15 @@ header .right-nav{
 
 
 .openicon-div{
+    width: 2.5rem;
+    background-color: var(--secondary-color);
     top: 6rem;
-    left: 2rem;
+    left: 1.5rem;
     position: fixed;
- 
+    display: flex;
+    justify-content: center;
+    border-radius: 0.5rem;
+    border: 1px solid var(--black-color);
 }
 
 #open-Icon{
@@ -92,8 +99,8 @@ header .right-nav{
 .side-nav{
     position: fixed;
     padding: 100px 20px 50px;
-    left: 5px;
-    width: 35%;
+    left: 0;
+    width: 30%;
     height: 100%;
     background-color: var(--primary-color);
     z-index: 2;
@@ -131,8 +138,10 @@ header .right-nav{
 
 #close-icon{
     font-size: 30px;
-    color: var(--secondary-color);
+    color: var(--black-color);
     cursor: pointer;
+    border: 1px solid var(--black-color);
+    border-radius: 0.5rem;
 }
 
 .profile-cont img{
@@ -217,6 +226,7 @@ header .right-nav{
     text-align: center;
 }
 
+
 .hero .analytics-container{
     width: 100%;
     height: 100%;
@@ -245,6 +255,10 @@ header .right-nav{
     box-shadow: 0 0 3px 2px rgba(0,0,0,0.1);
 }
 
+.top-balance-container .refreshIcon{
+    width: 15px;
+}
+
 .bottom-balance-container{
     display: flex;
     justify-content: center;
@@ -257,21 +271,83 @@ header .right-nav{
     flex-direction: column;
     text-align: left;
     align-items: flex-start;
-    gap: 0.5rem;
+    gap: 0.2rem;
     background-color: var(--secondary-color);
-    padding: 1rem;
+    padding: 0.5rem 4rem;
     border-radius: 1rem;
-    width: clamp(200px, 100%, 300px);
+    width: clamp(200px, 100%, 500px);
     box-shadow: 0 0 3px 2px rgba(0,0,0,0.1);
 }
 
 .graph{
     display: flex;
+    flex-direction: column;
+    text-align: center;
     justify-content: center;
-    gap: 8rem;
-    align-items: start;
+    gap: 4rem;
+}
+
+.graph .top-graph{
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    align-items: center;
     text-align: left;
 }
+
+.top-graph .total-bal-container{
+    width: clamp(200px, 100%, 500px);
+    box-shadow: 0 0 3px 2px rgba(0,0,0,0.1);
+    padding: 5rem 4rem;
+    border-radius: 1rem;
+    border: 1px solid var(--dark-green);
+}
+
+.Total-bal-article{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.hash{
+    display: flex;
+    background-color: var(--black-color);
+    padding: 1rem;
+    color: var(--secondary-color);
+    border-radius: 0.5rem;
+    margin-bottom: -1rem;
+}
+
+.bottom-graph{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.analytics-graph img {
+    width: clamp(100px, 100%, 550px);
+    border-radius: 0.5rem;
+}
+
+.analytics-graph .chart{
+    width: clamp(100px, 100%, 550px);
+    border-radius: 0.5rem;
+    border: 1px solid ;
+    padding: 2.5rem 1rem;
+}
+
+.digit-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: start;
+}
+
+.digit{
+    color: var(--secondary-color);
+    font-size: clamp(12px, 5vw, 20px);
+}
+
 
 
 /* ***************MOBILE SCREEN******************** */
@@ -286,17 +362,25 @@ header .right-nav{
         display: none;
     }
 
+
     .openicon-div{
+        width: 2.5rem;
+        background-color: var(--secondary-color);
         top: 1.5rem;
-        right: -16em;
+        left: 18rem;
         position: fixed;
         z-index: 50;
+    }
+    
+
+    #open-Icon{
+        right: 2rem;
     }
 
     .side-nav{
         position: fixed;
         padding: 100px 20px 50px;
-        left: 5px;
+        left: 0px;
         width: 80%;
         height: 100%;
         background-color: var(--primary-color);
@@ -349,16 +433,6 @@ header .right-nav{
         margin: 0 auto;
         justify-content: center;
     }
-
-    .top-balance-container{
-        display: flex;
-        flex-direction: column;
-        text-align: left;
-        align-items: flex-start;
-        gap: 0.5rem;
-        width: clamp(200px, 100%, 300px);
-        align-items: flex-start;
-    }
     
     .bottom-balance-container{
         display: flex;
@@ -385,10 +459,24 @@ header .right-nav{
         gap: 2rem;
     }
 
-    
-    .activity img{
-        font-size: 20px;
-        width: 100%;
+    .graph .top-graph{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 2rem;
     }
     
+    .top-graph .total-bal-container{
+        width: clamp(100px, 100%, 300px);
+    }
+    
+    .history-container img{
+        width: clamp(100px, 100%, 300px);
+    }
+
+    .bottom-graph{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
 }
