--- a/forgot-password.css
+++ b/forgot-password.css
@@ -8,3 +8,10 @@
       font-size: .8em;
       margin-bottom: 1.5em;
 }
+
+
+@media (max-width:600px) {
+      .image-container {
+          display: none;
+      }
+  }
