--- a/sign-in.css
+++ b/sign-in.css
@@ -132,3 +132,9 @@
       flex: 1;
       background: url('images/Streets.png') no-repeat center center/cover;
   }
+
+  @media (max-width:600px) {
+    .image-container {
+        display: none;
+    }
+}
